--- a/4.dataWrangle-metricExample/4.students/metric_v3.Rmd
+++ b/4.dataWrangle-metricExample/4.students/metric_v3.Rmd
@@ -1,8 +1,8 @@
 ---
 layout: topic
-title: "Analysis of survey data for metrics, scientific literacy and attitude"
+title: "Preprocess survey data for metrics, scientific literacy and attitude"
 author: "H Qin"
-date: "9/11/2018"
+date: "2019 May 31"
 output: html_document
 ---
 
@@ -57,7 +57,7 @@ cbind is to combine columns.
 substr is to take a portion of string variables.  
 
 ```{r}
-cbind (names(tb), substr(names(tb.ori), 1, 20))
+cbind (names(tb), substr(names(tb.ori), 1, 30))
 ?cbind
 ```
 
@@ -78,19 +78,16 @@ table(tb$age)
 tb$degree [is.na(tb$degree)] = 'Do not wish to answer'
 table(tb$degree)
 
-
 tb$gender[tb$gender=='']='Do not wish to answer'
 table(tb$gender)
 
-
 ```
 
-# Change all missing values to NA
+# Change all missing values (skipped questions) to NA
 doing repetive task one by one is tedious.
-we can use loops
+we can use nested for-loops
 
 ```{r}
-
 # dealing with missing values, add 'NA' to empty answers
 # nested for-loops
 for( i in 1:length(tb[, 1])) {  #outter for-loop, i for row, from 1 to the last row
@@ -114,8 +111,9 @@ for( i in 1:length(tb[, 1])) {  #outter for-loop
 
 # Now, we need to conver survey data in chacracters into numeric scores
 
-```{r}
+# First, convert age categories into numeric values
 
+```{r}
 ##### create a second table, convert character values to numerical values
 tb2 = tb[ ,c(2,4,5)]  #this is the score table, empty space before comma indicate every row
 head(tb2)
@@ -136,19 +134,29 @@ tb2$age[grep("56-60", tb$age)] = 56/2 + 60/2
 # [1]   6  12  84  88 104 112 129 130 131 132 133 156 162 163 185 216 219
 
 tb2$age[grep("More than 60 years", tb$age)] = 65
+```
 
+Check the age responses
+```{r}
 table(tb$age) #table is a very useful function (command) for tabulation
 table(tb2$age)
 summary(tb2$age)
+```
 
-#Visualize the data
+# Visualize the age values
+
+```{r}
 table(tb2$age, tb2$gender)
 boxplot( tb2$age ~ tb2$gender)
 
 #histogram of age
 hist(tb2$age)
 
-###country 
+```
+
+# Convert country responses into values
+
+```{r}
 table( tb$country )  #All the inputed 'countries'
 tb2$country = 0  #for non-USA countries
 tb2$country[tb$country=='United States'] = 1
@@ -159,9 +167,7 @@ head(tb2)
 
 #double-check the columns
 names(tb2)
-
 ```
-
 
 # The survey contains by 3 categories of questions
 1) Metric proficiency
@@ -209,7 +215,12 @@ tb2$weather[tb$weather=="A Short sleeve shirt"] = 1
 table(tb$weather)
 table(tb2$weather)
 
-######### summarize the metric proficiency score
+
+```
+
+# Summarize the metric proficiency score by rows. 
+
+```{r}
 # metrics = c("shaq", "kilo", "mm", "inseam", "weather")
 #metric total score
 tb2$metric = apply( tb2[, metrics], MARGIN=1, FUN=sum )
@@ -334,194 +345,10 @@ hist(tb2$SciLitScore, br=20)
 str(tb2)
 ```
 
+# Output the 'cleaned' data to a csv file
 
 ```{r}
 tb3 = tb2[, c("gender", "age", "country", "degree", "metric", "SciAttitude", "SciLitScore")]
 head(tb3)
 write.csv(tb3, file = "metric-attitude-literacy.csv", row.names = FALSE, quote=TRUE)
 ```
-
-#Is gender associated with metric usage? 
-
-```{r}
-boxplot( tb2$metric ~ tb2$gender, ylab="metric proficiency" )
-
-t.test(tb2$metric[tb2$gender=='Female'], tb2$metric[tb2$gender=='Male'])
-#Does this mean that females are more uncomfortable with metric usage?
-```
-
-```{r}
-# Female participants tend to be younger
-boxplot( tb2$age ~ tb2$gender, ylab='age')
-
-# More female participants with Bachelor degrees
-table( tb2$gender, tb2$degree )
-
-boxplot( tb2$metric ~ tb2$degree, ylab='metric proficiency')
-
-# Multiple regression
-m1 = lm( tb2$metric ~ tb2$degree )
-summary(m1)
-
-m2 = lm( tb2$metric ~ tb2$age )
-summary(m2)
-
-m3 = lm( tb2$metric~ tb2$gender + tb2$degree + tb2$age )
-summary(m3)
-
-```
-
-
-# Caudal regression analyses
-
-```{r causal-analsyis}
-#########################
-#summary(tb); str(tb)
-
-#remove rows with missing age from analysis. Missing age can cause bugs in anova model comparisons. 
-tb2 = tb2[!is.na(tb2$age), ] 
-
-summary(tb2)
-str(tb2); 
-
-pairs(tb2[, c("metric", "SciLitScore", "SciAttitude")])
-summary(lm(tb2$SciLitScore ~ tb2$metric )) #significant
-summary(lm(tb2$SciAttitude ~ tb2$metric )) #significant
-summary(lm(tb2$SciAttitude ~ tb2$SciLitScore )) #significant
-summary(lm(tb2$SciAttitude ~ tb2$age )) #significant
-summary(lm(tb2$metric ~ tb2$age )) #significant
-
-summary(lm(tb2$SciAttitude ~ tb2$SciLitScore + tb2$metric )) #significant
-## metric -> SciAttitude and SciLitScore
-
-
-summary(lm(tb2$SciAttitude ~ tb2$metric + tb2$age + tb2$gender + tb2$country  )) #only metric is significant
-summary(lm(tb2$SciLitScore ~ tb2$metric + tb2$age + tb2$gender + tb2$country  )) #only metric is significant
-
-summary(lm(tb2$SciLitScore ~ tb2$country)) #p=0.0009, but seems due to metric?  
-summary(lm(tb2$SciLitScore ~ tb2$metric + tb2$country  )) #only metric is significant
-
-summary(lm(tb2$SciAttitude ~ tb2$country)) #p=0.0127, but seems due to metric?  
-summary(lm(tb2$SciAttitude ~ tb2$country + tb2$metric)) #country not significant when controled for metric 
-
-
-plot( tb2$SciLitScore ~ jitter(tb2$metric), xlab='Metric Proficiency', ylab='Scientific Literacy', ylim=c(2,10) )
-m1 = lm(tb2$SciLitScore ~ tb2$metric )
-abline(m1, col='red')
-summary(m1)
-text(2, 2.5, "SciLit ~ Metric, R2=0.26, p<0.001", col="red", pos=4)
-#abline(m2, col='blue')
-summary(m2)
-m2 = lm(tb2$SciLitScore ~ tb2$metric + tb2$age)
-anova(m1, m2)
-m3 = lm(tb2$SciLitScore ~ tb2$metric + tb2$age + tb2$gender)
-summary(m3)
-anova(m2,m3)
-m4 = lm(tb2$SciLitScore ~ tb2$metric + tb2$age + tb2$country)
-anova(m2, m4)
-#text(2, 2, "SciLit ~ Metric + Age, R2=0.29, p=2.8E-14", col="blue", pos=4)
-
-plot( tb2$SciAttitude ~ jitter(tb2$metric), ylim=c(0.5,4), xlab='Metric Proficiency', ylab='Attitude toward Science' )
-m1 = lm( tb2$SciAttitude ~ tb2$metric )
-m2 = lm( tb2$SciAttitude ~ tb2$metric + tb2$age )
-abline(m1, col='red')
-abline(m2, col='blue')
-summary(m1)
-summary(m2)
-anova(m1, m2)
-text(2, 0.9, "SciAttitude ~ Metric , R2=0.18, p=1.0E-9", col="red", pos=4)
-text(2, 0.7, "SciAttitude ~ Metric + Age, R2=0.24, p=4.7E-12", col="blue", pos=4)
-
-plot( tb2$SciAttitude ~ jitter(tb2$age), ylab='Attitude toward Science', xlab='Age')
-m2 = lm( tb2$SciAttitude ~ tb2$age + tb2$metric)
-abline(m2, col='blue')
-text(30, 1.7, "SciAttitude ~ Metric + Age, R2=0.24, p=4.7E-12", col="blue", pos=4)
-
-summary(lm(tb2$SciAttitude ~ tb2$metric + tb2$age + tb2$gender + tb2$country  )) #age is signicant!!!
-
-#but this might be a bias in the sample
-# 1) there is many faculty
-# 2) people took the sample may be interested in the metric and science at the first place?!
-summary(lm(tb2$SciAttitude ~ tb2$metric + tb2$age + tb2$gender + tb2$country + tb2$degree  )) #age is signicant!!!
-
-summary(lm(tb2$SciAttitude ~ tb2$SciLitScore))
-summary(lm(tb2$SciAttitude ~ tb2$SciLitScore + tb2$metric))
-
-boxplot( tb2$SciAttitude ~ tb2$country )
-boxplot( tb2$SciLitScore ~ tb2$country )
-boxplot( tb2$metric ~ tb2$country )
-
-boxplot( tb2$SciLitScore ~ tb2$age )
-boxplot( tb2$SciAttitude ~ tb2$age )
-boxplot( tb2$metric ~ tb2$age )
-
-###########
-# remove phD from the samples
-#
-summary(tb2[, 1:5])
-tb3 = tb2[ - grep('Ph.D.', tb2$degree)  , ]
-summary(tb3)
-summary(lm(tb3$SciAttitude ~ tb3$metric + tb3$age + tb3$gender + tb3$country + tb3$degree  )) 
-#age is still signicant after PhD are removed from the sample
-
-```
-
-# Add mediator test here !!!!!!
-```{r}
-
-```
-
-
-#Write an R function to do two-sample test.  
-
-For large sample size, exact test is unnecessary. 
-
-```{r major-tests}
-
-testTwoFactorTb2 = function( fac1, fac2) {
-  tbTwo = table( tb2[,fac1], tb2[,fac2] )
-  print(tbTwo)
-  f = fisher.test(tbTwo)
-  #f = chisq.test(tbTwo)
-}
-
-#metrics = c("shaq", "kilo", "mm", "inseam", "weather")
-#sciLiteracy = c("light", "fossil", "food", "electronCharge", 
-#                "earlyHuman", "laser", "continents", "antibiotics", "electronSize", "earthCenter")
-#sciAttitude = c("religiousView", "dailyLife", "SciOnLife", "SciEffect")
-
-f = testTwoFactorTb2( "shaq", "religiousView"); f
-f = testTwoFactorTb2( "shaq", "dailyLife"); f
-f = testTwoFactorTb2( "shaq", "SciOnLife"); f
-
-#f = testTwoFactorTb2( "shaq", "SciEffect"); f #significant effect!!!!
-#f = testTwoFactorTb2( "kilo", "SciEffect"); f #significant effect!!!
-#f = testTwoFactorTb2( "mm", "SciEffect"); f #significant effect!!!
-#f = testTwoFactorTb2( "inseam", "SciEffect"); f #significant effect!!!
-#f = testTwoFactorTb2( "weather", "SciEffect"); f #p=0.078
-#f = testTwoFactorTb2( "country", "SciEffect"); f #p=0.24
-
-summary(lm(tb2$SciEffect ~ tb2$kilo + tb2$country + tb2$gender + tb2$age + tb2$degree )) #significant kilo 
-summary(lm(tb2$SciOnLife ~ tb2$kilo + tb2$country + tb2$gender + tb2$age + tb2$degree )) #no effect
-summary(lm(tb2$religiousView ~ tb2$kilo + tb2$country + tb2$gender + tb2$age + tb2$degree )) #age effect
-summary(lm(tb2$dailyLife ~ tb2$kilo + tb2$country + tb2$gender + tb2$age + tb2$degree )) #gender
-
-summary(lm(tb2$religiousView ~ tb2$kilo + tb2$country + tb2$gender + tb2$age + tb2$degree )) #significant age, gender 
-summary(lm(tb2$SciOnLife ~ tb2$kilo + tb2$country + tb2$gender + tb2$age + tb2$degree )) #no effect
-summary(lm(tb2$dailyLife ~ tb2$kilo + tb2$country + tb2$gender + tb2$age + tb2$degree )) #gender effect, education
-
-summary(lm(tb2$SciEffect ~ tb2$mm + tb2$country + tb2$gender + tb2$age + tb2$degree )) #no effect
-summary(lm(tb2$SciEffect ~ tb2$inseam + tb2$country + tb2$gender + tb2$age + tb2$degree )) #random
-summary(lm(tb2$SciEffect ~ tb2$shaq + tb2$country + tb2$gender + tb2$age + tb2$degree )) #p=0.066 shaq
-summary(lm(tb2$SciEffect ~ tb2$weather + tb2$country + tb2$gender + tb2$age + tb2$degree )) #no effect
-
-
-f = testTwoFactorTb2("country", "shaq")
-f
-
-f = testTwoFactorTb2( "country", "shaq")
-f
-
-
-```
-
