tucker carlson video

--- a/1.startRwMetricExample/learningR_through_metric_example.Rmd
+++ b/1.startRwMetricExample/learningR_through_metric_example.Rmd
@@ -19,6 +19,9 @@ layout: topic
 
 ------------
 
+Background 
+https://youtu.be/1cPeZLCVWTw
+
 # Check files in the working directory 
 
 ```{r list}
